--- a/index.html
+++ b/index.html
@@ -129,13 +129,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>PHONE </b></li>
-										<li>+918598066260</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>ADDRESS </b></li>
-										<li>House no: 8, Nirmal Mahato Road Uliyan Kadma, Jamshedpur, Jharkhand, pin-831005.</li>
+										<li>Bangalore India</li>
 									</ul>
 								</li>
 								<li>
